[project]
name = "app"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "dishka~=1.1.0",
    "sqlalchemy~=2.0.29",
    "alembic~=1.13.1",
    "fastapi~=0.110.1",
    "pyjwt~=2.8.0",
    "passlib~=1.7.4",
    "asyncpg~=0.29.0",
    "aiohttp~=3.9.5",
    "uvicorn~=0.30.1",
    "aiofiles~=24.1.0",
]

[project.optional-dependencies]
dev = [
    "black~=24.4.0",
    "flake8~=7.0.0",
    "pytest~=8.1.1",
    "pytest-asyncio~=0.23.6",
]

[tool.pytest.ini_options]
testpaths = "tests"
asyncio_mode = "auto"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.black]
line-length = 79
